--- a/README.Rmd
+++ b/README.Rmd
@@ -17,8 +17,8 @@ knitr::opts_chunk$set(
 <img src='https://github.com/aquaMetrics/macroinvertebrateMetrics/blob/master/man/figures/macro_logo.png?raw=true' align="right" width="200" />
 
 <!-- badges: start -->
-  [![R-CMD-check](https://github.com/aquaMetrics/macroinvertebrateMetrics/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/aquaMetrics/macroinvertebrateMetrics/actions/workflows/R-CMD-check.yaml)
-  [![codecov](https://codecov.io/gh/aquaMetrics/macroinvertebratesMetrics/branch/master/graph/badge.svg)](https://codecov.io/gh/aquaMetrics/macroinvertebratesMetrics)
+[![R-CMD-check](https://github.com/aquaMetrics/macroinvertebrateMetrics/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/aquaMetrics/macroinvertebrateMetrics/actions/workflows/R-CMD-check.yaml)
+[![codecov](https://codecov.io/gh/aquaMetrics/macroinvertebrateMetrics/branch/master/graph/badge.svg?token=sUCV2wxoHI)](https://codecov.io/gh/aquaMetrics/macroinvertebrateMetrics)
 <!-- badges: end -->
 
 # Work in Progress
